--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,10 @@ html, body {
         position:fixed;
         padding:0;
         left:50%;
-        bottom: 50%;
+        /* bottom: 50%; */
         margin-left:-45%;
         margin-top:5%;
-        margin-bottom: -35%;
+        /* margin-bottom:10%; */
         width: 90%;
         height: 90%;
         background:rgba(255,255,255,0.5);
@@ -28,7 +28,7 @@ html, body {
 
     font-size: 23px;
     font: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
     line-height: 2;
     font-family: 'DM Serif Display', 'Helvetica Neue', Helvetica, sans-serif;
 
